@startuml

title __SRC's Class Diagram__\n

  namespace  {
    abstract class Amenities {
        {abstract} + getDescription()
    }
  }
  

  namespace  {
    class AutoRefillBar {
        {static} + COST : double
        + AutoRefillBar()
        + cost()
        + getColony()
        + getDescription()
        + getRoomNumber()
    }
  }
  

  namespace  {
    class CheckIn {
        + getRoom()
    }
  }
  

  namespace  {
    class DeluxeRoom {
        {static} + COST : double
        + DeluxeRoom()
        + DeluxeRoom()
        + cost()
    }
  }
  

  namespace  {
    class FoodBar {
        {static} + COST : double
        + FoodBar()
        + cost()
        + getColony()
        + getDescription()
        + getRoomNumber()
    }
  }
  

  namespace  {
    class MasterRoach {
        - email : String
        - expiration : String
        - name : String
        - securityCode : String
        + MasterRoach()
        + pay()
    }
  }
  

  namespace  {
    class Motel {
        {static} - motel : Motel
        - occupiedRooms : ArrayList<Room>
        - rooms : ArrayList<Integer>
        + checkIn()
        + checkOut()
        + createRooms()
        {static} + getInstance()
        + getOccupiedRooms()
        + toString()
        - Motel()
    }
  }
  

  namespace  {
    interface PaymentStrategy {
        {abstract} + pay()
    }
  }
  

  namespace  {
    class RegularRoom {
        {static} + COST : double
        + RegularRoom()
        + RegularRoom()
        + cost()
    }
  }
  

  namespace  {
    class RoachColony {
        - growthRate : double
        - name : String
        - population : int
        + RoachColony()
        + getGrowthRate()
        + getName()
        + getPopulation()
        + party()
        + toString()
    }
  }
  

  namespace  {
    class RoachPal {
        - email : String
        - name : String
        + RoachPal()
        + pay()
    }
  }
  

  namespace  {
    abstract class Room {
        # description : String
        # roomNumber : int
        {abstract} + cost()
        + getColony()
        + getDescription()
        + getRoomNumber()
    }
  }
  

  namespace  {
    class Singleton {
        {static} - instance : Singleton
        {static} + getInstance()
        - Singleton()
    }
  }
  

  namespace  {
    class Spa {
        {static} + COST : double
        + Spa()
        + cost()
        + getColony()
        + getDescription()
        + getRoomNumber()
    }
  }
  

  namespace  {
    class SprayResistantShower {
        {static} + COST : double
        + SprayResistantShower()
        + cost()
        + getColony()
        + getDescription()
        + getRoomNumber()
    }
  }
  

  namespace  {
    class SuiteRoom {
        {static} + COST : double
        + SuiteRoom()
        + SuiteRoom()
        + cost()
    }
  }
  

  namespace  {
    class Tester {
        {static} + main()
    }
  }
  

  Amenities -up-|> Room
  AutoRefillBar -up-|> Amenities
  AutoRefillBar o-- Room : room
  DeluxeRoom -up-|> Room
  FoodBar -up-|> Amenities
  FoodBar o-- Room : room
  MasterRoach .up.|> PaymentStrategy
  RegularRoom -up-|> Room
  RoachPal .up.|> PaymentStrategy
  Room o-- RoachColony : colony
  Spa -up-|> Amenities
  Spa o-- Room : room
  SprayResistantShower -up-|> Amenities
  SprayResistantShower o-- Room : room
  SuiteRoom -up-|> Room


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
